@@ -13,6 +13,13 @@
    document name for menu items (closes #3038844).
 
 
+2010-07-13  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/filetypes.c:
+   On Windows, convert filetype extensions read from config files
+   to lower case (closes #3028856).
+
+
 2010-07-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/keybindings.c:
